# InfinityCastle

./: .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md  REFERENCES.md  TODO.md
.github/workflows/: linux.yml  macos.yml  webassembly.yml  windows.yml
projects/VS2022/: InfinityCastle.sln
projects/VS2022/InfinityCastle/: InfinityCastle.vcxproj
src/: #main.c#  Makefile  Makefile.Android  buildings.c  buildings.h  camera.c  camera.h  culling.c  culling.h  frustum.c  frustum.h  game.h  global_state.h  main.c  map.c  map.h  mtypes.h  path_ways.c  path_ways.h  planes.c  planes.h  rays.c  rays.h  rng.c  rng.h  tests.c  tests.h  utils.c  utils.h
